--- a/_posts/0000-01-02-Mati1976.md
+++ b/_posts/0000-01-02-Mati1976.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to Mati1976 slide!"
 ---
 This is Mati1976 Slide
 Use the left arrow to go back!
