--- a/_posts/0000-01-02-Mati1976.md
+++ b/_posts/0000-01-02-Mati1976.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to Mati1976 slide!"
 ---
-This is my great slide
+This is my great slide :tada:
 Use the left arrow to go back!
